# otter

./: .hgignore  Cargo.toml  README.md
pages/: index.md
src/: main.rs  repo.rs
static/: style.css
templates/: edit.html  hello.html  page.html  page.tmpl
